add en translation and resolve tagList bug when reducing

--- a/locales/en/auth.json
+++ b/locales/en/auth.json
@@ -1,1 +1,11 @@
-{}
+{
+  "username": "Username",
+  "email": "Email address",
+  "password": "Password",
+  "passwordConfirm": "Confirm password",
+  "signin": "Sign up",
+  "login": "Log in",
+  "alreadyHasAccount": "Already have an account?",
+  "byEmail": "by email",
+  "signinByEmail": "$t(signin) $t(byEmail)"
+}
