--- a/locales/fr/auth.json
+++ b/locales/fr/auth.json
@@ -1,11 +1,11 @@
 {
-  "username": "Nom d'utilisateur",
-  "email": "Email",
+  "username": "Nom d’utilisateur",
+  "email": "Adresse e-mail",
   "password": "Mot de passe",
-  "passwordConfirm": "Confirmation du mot de passe",
-  "signin": "Inscription",
-  "alreadyHasAccount": "J'ai déjà un compte",
-  "login": "Connexion",
-  "byEmail": "par mail",
+  "passwordConfirm": "Confirmer le mot de passe",
+  "signin": "S’inscrire",
+  "login": "Se connecter",
+  "alreadyHasAccount": "J’ai déjà un compte",
+  "byEmail": "par e-mail",
   "signinByEmail": "$t(signin) $t(byEmail)"
 }
