--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,6 +1,6 @@
 {
   "brand": "Codexa",
   "all": "Tous",
-  "slogan": "Parce que chaque livre compte.",
-  "or": "Ou"
+  "or": "Ou",
+  "slogan": "Parce que chaque livre compte."
 }
