--- a/locales/en/books.json
+++ b/locales/en/books.json
@@ -1,18 +1,18 @@
 {
-  "mybooks": "My Books",
+  "title": "My Books",
   "filters": {
     "searchPlaceholder": "Title or author..."
   },
   "status": {
     "status#1": "Wishlist",
-    "status#2": "To Read",
-    "status#3": "In Progress",
+    "status#2": "To read",
+    "status#3": "In progress",
     "status#4": "Read",
     "status#5": "Abandoned"
   },
   "tags": {
-    "tagsLabelAll": "{{tags}}: {{all}}",
-    "tags": "Tags",
-    "minimize": "Minimize"
+    "title": "Tags",
+    "minimize": "Minimize",
+    "labelAll": "$t(tags.title): $t(common:all)"
   }
 }
