Start filter page

--- a/locales/en/books.json
+++ b/locales/en/books.json
@@ -14,5 +14,6 @@
     "title": "Tags",
     "minimize": "Minimize",
     "labelAll": "$t(tags.title): $t(common:all)"
-  }
+  },
+  "add": "Add a book"
 }
